--- a/port-tiles.html
+++ b/port-tiles.html
@@ -143,7 +143,7 @@
                 </main>
                 <footer>
                     <div class="inner-footer">
-                        <ul class="social list-inline block-center">
+                        <ul class="social list-inline">
                             <li><a href="https://www.linkedin.com/in/rashetdacambridge" class="icons icon-linkedin" title="Linkedin"></a></li>
                             <li><a href="https://twitter.com/rdotgalofdesign" class="icons icon-twitter" title="twitter"></a></li>
                             <li><a href="https://www.linkedin.com/in/rashetdacambridge" class="icons icon-blog" title="Blog"></a></li>
